# Scacchista

./: .gitignore  AGENTS.md  ANALISI_v0.5.2.txt  BISECT_LOG.md  BUGFIX_BASELINE.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CHECKPOINT_1.md  Cargo.toml  DOC_STATUS.md  FINAL_REPORT_v0.5.2.md  FINAL_REPORT_v0.5.3.md  FINAL_REPORT_v0.5.md  HANDOFF.md  IMPLEMENTATION_PLAN_v0.5.md  IMPROVEMENT_SUMMARY.md  LUCAS_CHESS_SETUP.md  MATE_DETECTION_FIX.md  MIGLIORAMENTI_POST_v0.3.0.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_STRATEGY_FINAL.md  PERFORMANCE_RESULTS_FINAL.md  PROFILING_PLAN.md  PROFILING_REPORT.md  PROGRESS_v0.5.2_P0.md  PROGRESS_v0.5.md  README.md  REPORT_v0.5.2_P0.md  ROADMAP_v0.6.md  STATO_PROGETTO_DETTAGLIATO.md  STATUS_SUMMARY.txt  TEST_PRATICI_v0.4.0.md  TORNEO_10_ROUNDS.txt  TORNEO_COMPLETO_LOG.txt  TORNEO_RISULTATI_FINALI.txt  TORNEO_V0.5.1_VERIFICA.txt  TORNEO_v0.5.2_VALIDAZIONE.txt  TORNEO_v0.5.3_RISULTATI.txt  VALIDAZIONE_FINALE_v0.3.0.md  benchmark_slow64.sh  (+43 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: README.md
docs/architecture/: evaluation.md  overview.md  search-engine.md  threading.md
docs/claude-code/: agents.md  handoff.md  project-guide.md
docs/development/: benchmarking.md  contributing.md  setup.md  testing.md
docs/reference/: changelog.md  performance.md  roadmap.md  uci-options.md
src/: board.rs  eval.rs  lib.rs  magic.rs  main.rs  utils.rs  zobrist.rs
src/search/: mod.rs  params.rs  params.rs.bak  search.rs  stats.rs  thread_mgr.rs  tt.rs
src/time/: mod.rs
src/uci/: loop.rs  mod.rs  options.rs  parser.rs
tests/: benchmark_comparison.rs  debug_perft_diff.rs  draw_detection.rs  epd_test.rs  eval_unit.rs  perft.rs  perft_deep.rs  perft_edge_cases.rs  regression_test.rs  repro_king_legality.rs  search_invariants.rs  tactical.rs  tactical_test_suite.rs  test_development_penalty.rs  test_material_eval_direct.rs  thread_mgr.rs  threading_stress.rs  time_control_bug.rs  time_management_tests.rs  uci_full.rs  uci_integration.rs  uci_parser.rs
tools/: scacchista_uci_launcher.sh  setup_lucas_engine.sh  tactical_test.py
tools/test_suites/: bk.epd  eigenmann.epd  wac.epd
