[package]
name = "scacchista"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
]

[dependencies]
shakmaty = { version = "0.27", features = ["std"] }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "scacchista"
path = "src/main.rs"

[[bin]]
name = "perft"
path = "src/bin/perft.rs"

[[bin]]
name = "debug_perft"
path = "debug_perft.rs"

[[bin]]
name = "test_board"
path = "test_board.rs"

[[bin]]
name = "test_qsearch_simple"
path = "test_qsearch_simple.rs"

[[bin]]
name = "test_make_unmake"
path = "test_make_unmake.rs"

[[bin]]
name = "compare_moves"
path = "compare_moves.rs"

[[bin]]
name = "debug_perft_divide"
path = "debug_perft_divide.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true