[package]
name = "scacchista"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Gaspare <gaspox@users.noreply.github.com>"]
description = "A UCI chess engine written in Rust with alpha-beta search, lazy-SMP threading, and HCE evaluation"
repository = "https://github.com/gaspox/Scacchista"
keywords = ["chess", "engine", "uci", "game"]
categories = ["games"]

[workspace]
members = [
    ".",
]

[dependencies]
shakmaty = { version = "0.27", features = ["std"] }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "scacchista"
path = "src/main.rs"

[[bin]]
name = "perft"
path = "src/bin/perft.rs"

[[bin]]
name = "debug_perft"
path = "debug_perft.rs"

[[bin]]
name = "test_board"
path = "test_board.rs"

[[bin]]
name = "test_qsearch_simple"
path = "test_qsearch_simple.rs"

[[bin]]
name = "profile_search"
path = "profile_search.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true